--- a/style.css
+++ b/style.css
@@ -18,3 +18,17 @@
   text-align: center;
   text-transform: uppercase;
 }
+footer {
+  background: #343a40;
+  padding: 15px 23px;
+  color: white;
+  text-align: center;
+  margin-top: 60px;
+}
+footer span a {
+  color: #00db71;
+  text-decoration: none;
+}
+footer span a:hover {
+  text-decoration: underline;
+}
